k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-web-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  IngressClassName: nginx
  rules:
    - host: sauravkarki.me
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: go-web-app
                port:
                  number: 80
